[package]
name = "tdn-did"
version = "0.1.0"
authors = ["CypherLink <contact@cypherlink.io>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
tdn-types = { git = "https://github.com/cypherlink/TDN", branch="main" }
ed25519-dalek = "1.0"
blake3 = "0.3"
bs58 = "0.4"
serde = { version = "1", features = ["derive"] }
