[package]
name = "tdn-did"
version = "0.3.0"
authors = ["CypherLink <contact@cypherlink.io>"]
edition = "2018"
license = "MIT/Apache-2.0"

[features]
default = ["user"]
user = []

[dependencies]
ed25519-dalek = "1.0"
signature = { version = "1", default-features = false }
blake3 = "0.3"
serde = { version = "1", features = ["derive"] }
tdn-types = { git = "https://github.com/cypherlink/TDN", branch="main", default-features = false }
